trunk/Archive2/19/470066f6f34b51/output
main.cpp: In function 'int main()':
main.cpp:15:16: error: cannot convert 'foo' to 'void*' for argument '1' to 'void function(void*)'
  function(foo());
                ^
