trunk/Archive2/19/470066f6f34b51/main.cpp
#include <cstddef>
 
void function(void*) {}
 
struct foo
{
    operator std::nullptr_t()
	{
		return nullptr;
	}
};
 
int main()
{
	function(foo());
}